--- a/Anchor.toml
+++ b/Anchor.toml
@@ -4,6 +4,7 @@ skip-lint = false
 [programs.localnet]
 bob = "8GYu5JYsvAYoinbFTvW4AACYB5GxGstz21FmZe3MNFn4"
 alice = "6wZDNWprmb9TAZYMAPpT23kHDPABvBLT8jbWQKLHEmBy"
+vizing_core = "VzgnUvjAQD9oXjHLsVGrS67GCMVdzKpwHGj3QanJhk3"
 
 
 [registry]
