--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,6 +5,7 @@ skip-lint = false
 bob = "8GYu5JYsvAYoinbFTvW4AACYB5GxGstz21FmZe3MNFn4"
 alice = "6wZDNWprmb9TAZYMAPpT23kHDPABvBLT8jbWQKLHEmBy"
 vizing_core = "VzgnUvjAQD9oXjHLsVGrS67GCMVdzKpwHGj3QanJhk3"
+vizing_app = "C17xMdoPdgPSYd7oGEjYf5LQ1mg6k6P3eavCBdMfaF1X"
 
 
 [registry]
