feat: landing with native cpi

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -6,6 +6,7 @@ bob = "8GYu5JYsvAYoinbFTvW4AACYB5GxGstz21FmZe3MNFn4"
 alice = "6wZDNWprmb9TAZYMAPpT23kHDPABvBLT8jbWQKLHEmBy"
 vizing_core = "VzgnUvjAQD9oXjHLsVGrS67GCMVdzKpwHGj3QanJhk3"
 vizing_app = "C17xMdoPdgPSYd7oGEjYf5LQ1mg6k6P3eavCBdMfaF1X"
+vizing_app_mock = "2xiuj4ozxygvkmC1WKJTGZyJXSD8dtbFxWkuJiMLzrTg"
 
 
 [registry]
