update: vizing app launch

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,6 +5,7 @@ skip-lint = false
 bob = "8GYu5JYsvAYoinbFTvW4AACYB5GxGstz21FmZe3MNFn4"
 alice = "6wZDNWprmb9TAZYMAPpT23kHDPABvBLT8jbWQKLHEmBy"
 vizing_core = "vizngM8xTgmP15xuxpUZHbdec3LBG7bnTe9j1BtaqsE"
+vizing_pad = "vizngM8xTgmP15xuxpUZHbdec3LBG7bnTe9j1BtaqsE"
 vizing_app = "C17xMdoPdgPSYd7oGEjYf5LQ1mg6k6P3eavCBdMfaF1X"
 vizing_app_mock = "2xiuj4ozxygvkmC1WKJTGZyJXSD8dtbFxWkuJiMLzrTg"
 
