--- a/programs/vizing_pad/Cargo.toml
+++ b/programs/vizing_pad/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "vizing_app_mock"
+name = "vizing_pad"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "vizing_app_mock"
+name = "vizing_pad"
 
 [features]
 no-entrypoint = []
@@ -17,4 +17,3 @@ default = []
 
 [dependencies]
 anchor-lang = "0.28.0"
-vizing_pad = { path = "../vizing_pad", features = ["cpi"]}
