fix: devnet deploy issue

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -30,3 +30,4 @@ wallet = "./governance/.config/wallet/deployer_keypair.json"
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/vizing.test.ts"
 init_bob = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 migrations/initial.bob.ts"
 init = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 migrations/initial.vizing.ts"
+launch = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 migrations/launch.ts"
