--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,12 +1,14 @@
+[toolchain]
+
 [features]
-seeds = false
+resolution = true
 skip-lint = false
 
 [programs.devnet]
 alice = "EM1xuughPx6KVN7H4DSC7xe7KuTzmMH52X4FnHF22wzF"
 bob = "bobQhTJQZZk4p98GrskDGxWZpfd5gnap1Hp5JiXpNek"
 vizing_app = "C17xMdoPdgPSYd7oGEjYf5LQ1mg6k6P3eavCBdMfaF1X"
-vizing_app_mock = "2xiuj4ozxygvkmC1WKJTGZyJXSD8dtbFxWkuJiMLzrTg"
+vizing_app_mock = "mokB6FzEZx6vPVmasd19CyDDuqZ98auke1Bk59hmzVE"
 vizing_core = "vizngM8xTgmP15xuxpUZHbdec3LBG7bnTe9j1BtaqsE"
 vizing_pad = "vizngM8xTgmP15xuxpUZHbdec3LBG7bnTe9j1BtaqsE"
 
@@ -14,7 +16,7 @@ vizing_pad = "vizngM8xTgmP15xuxpUZHbdec3LBG7bnTe9j1BtaqsE"
 alice = "EM1xuughPx6KVN7H4DSC7xe7KuTzmMH52X4FnHF22wzF"
 bob = "bobQhTJQZZk4p98GrskDGxWZpfd5gnap1Hp5JiXpNek"
 vizing_app = "C17xMdoPdgPSYd7oGEjYf5LQ1mg6k6P3eavCBdMfaF1X"
-vizing_app_mock = "2xiuj4ozxygvkmC1WKJTGZyJXSD8dtbFxWkuJiMLzrTg"
+vizing_app_mock = "mokB6FzEZx6vPVmasd19CyDDuqZ98auke1Bk59hmzVE"
 vizing_core = "vizngM8xTgmP15xuxpUZHbdec3LBG7bnTe9j1BtaqsE"
 vizing_pad = "vizngM8xTgmP15xuxpUZHbdec3LBG7bnTe9j1BtaqsE"
 
@@ -23,11 +25,12 @@ url = "https://api.apr.dev"
 
 [provider]
 cluster = "Localnet"
-#cluster = "devnet"
 wallet = "./governance/.config/wallet/deployer_keypair.json"
 
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/vizing.test.ts"
-init_bob = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 migrations/initial.bob.ts"
 init = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 migrations/initial.vizing.ts"
+init_bob = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 migrations/initial.bob.ts"
+init_mock = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 migrations/appMockInit.ts"
 launch = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 migrations/launch.ts"
+launch_mock = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 migrations/launchFomMockApp.ts"
+test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/vizing.test.ts"
