--- a/programs/vizing_core/Cargo.toml
+++ b/programs/vizing_core/Cargo.toml
@@ -17,5 +17,5 @@ default = []
 idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
-anchor-lang = "0.30.1"
-vizing_pad = { path = "../vizing_pad", features = ["cpi"]}
+anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
+vizing_pad = { path = "../vizing_pad", features = ["cpi"] }
